--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import data from '../utils/data';
-import Layout from '../layout/Layout.astro';
-import ProductsSroll from '../containers/Product_Scroll.astro';
-import CardSlider from '../containers/Card_Slider.astro';
-import '../styles/global.css';
+import data from "../utils/data";
+import Layout from "../layout/Layout.astro";
+import ProductsSroll from "../containers/Product_Scroll.astro";
+import CardSlider from "../containers/Card_Slider.astro";
+import "../styles/global.css";
 
 export interface Props {
   title: string;
