--- a/src/containers/Product_Scroll.astro
+++ b/src/containers/Product_Scroll.astro
@@ -1,5 +1,5 @@
 ---
-import type { IProduct } from '../utils/data';
+import type { IProduct } from "../utils/data";
 
 export interface Props {
   products: IProduct[];
@@ -26,7 +26,7 @@ const { products, categories } = Astro.props;
         categories.map((category) => {
           return (
             <button class="opacity-[var(--dark-reduced-opacitity-1)] active:bg-[var(--light-gray) mr-2 inline-block overflow-hidden rounded-md bg-[var(--transparent-gray-1)] py-1 px-[2%] text-start font-semibold text-[var(--font-secondary-color)] hover:bg-[var(--light-gray)]">
-              {category.join(' & ')}
+              {category.join(" & ")}
             </button>
           );
         })
@@ -45,7 +45,7 @@ const { products, categories } = Astro.props;
         /* CategoryGroup */ <div class="w-full">
           <div class="opacity-[var(--dark-reduced-opacitity-1)] my-3 mx-auto w-[85%] border-b-[2px] border-solid border-[#dfe3e6]" />
           <h1 class="opacity-[var(--dark-reduced-opacitity-1)] m-auto mb-3 w-[90%] text-start font-semibold text-[var(--font-terceary-color)]">
-            {category.join(' & ')}
+            {category.join(" & ")}
           </h1>
           <div class="m-auto flex w-full justify-center flex-wrap">
             {categoryProducts.map((product) => (
@@ -57,14 +57,14 @@ const { products, categories } = Astro.props;
                       class="product-image-container relative flex w-full justify-center items-center"
                       data-value={
                         product.image.src +
-                        '&' +
+                        "&" +
                         product.slug +
-                        '&' +
+                        "&" +
                         product.price +
-                        ' ' +
+                        " " +
                         product.secondaryImages
-                          .map((image) => image.src + '&' + image.name)
-                          .join(' ')
+                          .map((image) => image.src + "&" + image.name)
+                          .join(" ")
                       }
                     >
                       <div class="pb-[100%] w-full inset-0 bg-gradient-to-br from-[var(--secondary-bg-color)] to-[var(--primary-bg-color)] animate-pulse" />
@@ -86,7 +86,7 @@ const { products, categories } = Astro.props;
                           height={18}
                           viewBox="0 0 24 24"
                           stroke-width="1"
-                          stroke={'currentColor'}
+                          stroke={"currentColor"}
                           fill="none"
                           stroke-linecap="round"
                           stroke-linejoin="round"
@@ -123,7 +123,7 @@ const { products, categories } = Astro.props;
           stroke-width="1.5"
           width={30}
           height={30}
-          stroke={'currentColor'}
+          stroke={"currentColor"}
         >
           <path
             stroke-linecap="round"
@@ -162,12 +162,12 @@ const { products, categories } = Astro.props;
           class="text-2x flex flex-col items-start justify-center p-5 font-semibold text-[var(--font-primary-color)]"
         >
           <h2 class="text-md opacity-[var(--dark-reduced-opacitity-1)]">
-            {''}
+            {""}
           </h2>
           <h3
             class="modal-product-price opacity-[var(--dark-reduced-opacitity-1)] text-md my-4"
           >
-            CUP$ {''}
+            CUP$ {""}
           </h3>
           <button
             class="text-md flex w-full justify-center rounded bg-[var(--light-gray-2)] py-1 px-4 text-[var(--font-secondary-color)] shadow outline-none hover:bg-[var(--light-gray)] active:bg-[var(--light-gray-1)]"
@@ -178,7 +178,7 @@ const { products, categories } = Astro.props;
               height={18}
               viewBox="0 0 24 24"
               stroke-width="1"
-              stroke={'currentColor'}
+              stroke={"currentColor"}
               fill="none"
               stroke-linecap="round"
               stroke-linejoin="round"
@@ -199,28 +199,28 @@ const { products, categories } = Astro.props;
 <script>
   /*   ProductScroll Images containers (div) */
   const productImageArray = document.querySelectorAll(
-    '.product-image-container'
+    ".product-image-container"
   );
   // adding event listener only to product items to open modal
   productImageArray.forEach((item) => {
-    item.addEventListener('click', (e) => {
-      openModal(item.getAttribute('data-value') || '');
-      productModal.classList.remove('scale-0');
+    item.addEventListener("click", (e) => {
+      openModal(item.getAttribute("data-value") || "");
+      productModal.classList.remove("scale-0");
     });
   });
   // Injecting product images
   productImageArray.forEach((imgContainer) => {
     const image = new Image();
     // Getting the data-value from the product image container
-    let imgContainerData = imgContainer.getAttribute('data-value');
+    let imgContainerData = imgContainer.getAttribute("data-value");
     // if there is not data-value, dont display anything
     if (!imgContainerData) return;
     // Each image data are separated by a space: " "
-    let imagesData = imgContainerData.split(' ');
+    let imagesData = imgContainerData.split(" ");
     // First URL is the main image
     // URL is separated from alt by "&"
-    image.src = imagesData[0].split('&')[0];
-    image.alt = imagesData[0].split('&')[1];
+    image.src = imagesData[0].split("&")[0];
+    image.alt = imagesData[0].split("&")[1];
     // onLoad Image:
     image.onload = () => {
       imgContainer.replaceChildren(image);
@@ -228,55 +228,55 @@ const { products, categories } = Astro.props;
   });
 
   // HTML element
-  const htmlContainer = document.querySelector('html') as HTMLHtmlElement;
+  const htmlContainer = document.querySelector("html") as HTMLHtmlElement;
   // stopping propagation in modal-container children
-  document.querySelectorAll('.onclick-stop-propagation').forEach((item) => {
-    item.addEventListener('click', (e) => {
+  document.querySelectorAll(".onclick-stop-propagation").forEach((item) => {
+    item.addEventListener("click", (e) => {
       e.stopPropagation();
     });
   });
 
   // the whole modal container
   const productModal = document.querySelector(
-    '.modal-container'
+    ".modal-container"
   ) as HTMLDivElement;
   // elements with "onclick-close-modal" class close modal on click
-  document.querySelectorAll('.onclick-close-modal').forEach((item) => {
-    item.addEventListener('click', () => {
+  document.querySelectorAll(".onclick-close-modal").forEach((item) => {
+    item.addEventListener("click", () => {
       closeModal();
-      productModal.classList.add('scale-0');
+      productModal.classList.add("scale-0");
     });
   });
 
   // contains the plincipal (big) product image of modal
   const productModalMainImage = document.querySelector(
-    '.modal-main-image-container'
+    ".modal-main-image-container"
   ) as HTMLDivElement;
 
   // Contains all the secondary (little) product images of modal
   const modalSecondaryAbsContainer = document.querySelector(
-    '.modal-secondary-images-absolute-container'
+    ".modal-secondary-images-absolute-container"
   ) as HTMLDivElement;
 
   const modalProductPrice = document.querySelector(
-    '.modal-product-price'
+    ".modal-product-price"
   ) as HTMLHeadingElement;
 
   // recieve the string with all the product data
   function openModal(dataValue: string) {
-    htmlContainer.style.overflow = 'hidden';
+    htmlContainer.style.overflow = "hidden";
 
-    const outerMainDiv = document.createElement('div');
-    outerMainDiv.className = 'relative flex w-full justify-center items-center';
-    const innerMainDiv = document.createElement('div');
+    const outerMainDiv = document.createElement("div");
+    outerMainDiv.className = "relative flex w-full justify-center items-center";
+    const innerMainDiv = document.createElement("div");
     innerMainDiv.className =
-      'pb-[100%] w-full inset-0 bg-gradient-to-br from-[var(--secondary-bg-color)] to-[var(--primary-bg-color)] animate-pulse';
+      "pb-[100%] w-full inset-0 bg-gradient-to-br from-[var(--secondary-bg-color)] to-[var(--primary-bg-color)] animate-pulse";
     outerMainDiv.appendChild(innerMainDiv);
 
     productModalMainImage.replaceChildren(outerMainDiv);
 
-    let imagesURLs = dataValue.split(' ');
-    imagesURLs = imagesURLs.filter((item) => item !== '');
+    let imagesURLs = dataValue.split(" ");
+    imagesURLs = imagesURLs.filter((item) => item !== "");
 
     const mainImage = new Image();
 
@@ -285,10 +285,10 @@ const { products, categories } = Astro.props;
     if (!mainImageData) return;
 
     // Getting image data
-    mainImage.src = mainImageData.split('&')[0];
-    mainImage.alt = mainImageData.split('&')[1];
-    modalProductPrice.innerText = 'CUP$ ' + mainImageData.split('&')[2];
-    mainImage.className = 'w-full';
+    mainImage.src = mainImageData.split("&")[0];
+    mainImage.alt = mainImageData.split("&")[1];
+    modalProductPrice.innerText = "CUP$ " + mainImageData.split("&")[2];
+    mainImage.className = "w-full";
 
     // onLoad replace
     mainImage.onload = () => {
@@ -296,26 +296,26 @@ const { products, categories } = Astro.props;
     };
 
     // wipping previous product modal secondary imgs
-    modalSecondaryAbsContainer.innerHTML = '';
+    modalSecondaryAbsContainer.innerHTML = "";
 
     let secondaryImages: HTMLImageElement[] = [];
     let currentMainImage: number = 0;
 
     imagesURLs.forEach((imageData) => {
       // creating placeholder for secondary image to display
-      const outerSecondaryDiv = document.createElement('div');
+      const outerSecondaryDiv = document.createElement("div");
       outerSecondaryDiv.className =
-        'modal-secondary-image-container shadow-md relative rounded-md w-[20%] h-[20%] flex justify-center items-center';
-      const innerSecondaryDiv = document.createElement('div');
+        "modal-secondary-image-container shadow-md relative rounded-md w-[20%] h-[20%] flex justify-center items-center";
+      const innerSecondaryDiv = document.createElement("div");
       innerSecondaryDiv.className =
-        'pb-[100%] w-full inset-0 bg-gradient-to-br from-[var(--secondary-bg-color)] to-[var(--primary-bg-color)] animate-pulse';
+        "pb-[100%] w-full inset-0 bg-gradient-to-br from-[var(--secondary-bg-color)] to-[var(--primary-bg-color)] animate-pulse";
       outerSecondaryDiv.appendChild(innerSecondaryDiv);
       // margin to secondary images for "shadow-md" can take effect
-      outerSecondaryDiv.style.margin = '4px';
+      outerSecondaryDiv.style.margin = "4px";
 
       // injecting secondary image placeholder to secondary imgs container
       modalSecondaryAbsContainer.insertAdjacentElement(
-        'beforeend',
+        "beforeend",
         outerSecondaryDiv
       );
 
@@ -326,8 +326,8 @@ const { products, categories } = Astro.props;
       if (!secondaryImageData) return;
 
       // getting image data
-      secondaryImage.src = secondaryImageData.split('&')[0];
-      secondaryImage.alt = secondaryImageData.split('&')[1];
+      secondaryImage.src = secondaryImageData.split("&")[0];
+      secondaryImage.alt = secondaryImageData.split("&")[1];
 
       secondaryImage.onload = () => {
         // upgrading secondary images arraylist
@@ -336,7 +336,7 @@ const { products, categories } = Astro.props;
         // replacing each image placeholder with image
         outerSecondaryDiv.replaceChildren(secondaryImage);
 
-        secondaryImage.addEventListener('click', () => {
+        secondaryImage.addEventListener("click", () => {
           // getting image index
           const currentMainImage = secondaryImages.findIndex(
             (item) => item === secondaryImage
@@ -344,11 +344,11 @@ const { products, categories } = Astro.props;
 
           secondaryImages.forEach((element) => {
             // here unselect all images
-            element.style.width = '90%';
+            element.style.width = "90%";
           });
           //here update selected image
-          secondaryImage.style.transition = 'width 0.3s ease-in-out'; // set transition property
-          secondaryImage.style.width = '100%'; // set new width
+          secondaryImage.style.transition = "width 0.3s ease-in-out"; // set transition property
+          secondaryImage.style.width = "100%"; // set new width
           // Scrolling secondary images to selected image
           modalSecondaryAbsContainer.style.transform = `translateX(${
             currentMainImage * -20
@@ -358,7 +358,7 @@ const { products, categories } = Astro.props;
           const newMainImage = new Image();
           newMainImage.src = secondaryImage.src;
           newMainImage.alt = secondaryImage.alt;
-          newMainImage.className = 'w-full';
+          newMainImage.className = "w-full";
 
           //replacing mainImage for selected secondary image
           outerMainDiv.replaceChildren(newMainImage);
@@ -368,9 +368,9 @@ const { products, categories } = Astro.props;
   }
 
   function closeModal() {
-    htmlContainer.style.overflow = 'auto';
-    productModalMainImage.innerHTML = '';
-    modalSecondaryAbsContainer.innerHTML = '';
-    modalSecondaryAbsContainer.style.removeProperty('transform');
+    htmlContainer.style.overflow = "auto";
+    productModalMainImage.innerHTML = "";
+    modalSecondaryAbsContainer.innerHTML = "";
+    modalSecondaryAbsContainer.style.removeProperty("transform");
   }
 </script>
