--- a/src/containers/Card_Slider.astro
+++ b/src/containers/Card_Slider.astro
@@ -47,7 +47,7 @@ const { images } = Astro.props;
     </button>
     <div
       id="h-scroll"
-      class="relative overflow-x-scroll flex w-full duration-300"
+      class="relative overflow-hidden flex w-full duration-300"
     >
       {
         images.map((image) => {
@@ -124,11 +124,20 @@ const { images } = Astro.props;
   let currentMinSliderX: number;
 
   cardSliderScroll.addEventListener(
+    "scroll",
+    function (e) {
+      e.preventDefault();
+      e.stopPropagation();
+    },
+    { passive: false, once: true, capture: true }
+  );
+
+  cardSliderScroll.addEventListener(
     "touchstart",
     (e) => {
       startSliderX = e.touches[0].clientX;
-      currentMaxSliderX = startSliderX * 1.2;
-      currentMinSliderX = startSliderX * 0.8;
+      currentMaxSliderX = e.touches[0].clientX;
+      currentMinSliderX = e.touches[0].clientX;
     },
     {
       passive: true,
@@ -153,14 +162,6 @@ const { images } = Astro.props;
   cardSliderScroll.addEventListener("touchend", (e) => {
     const endSliderX = e.changedTouches[0].clientX;
 
-    // if (endSliderX > currentMinSliderX && endSliderX < currentMaxSliderX) {
-    //   cardSliderScroll.scrollTo({
-    //     left: cardSliderScroll.offsetWidth * currentCard,
-    //     behavior: "smooth",
-    //   });
-    //   return;
-    // }
-
     if (endSliderX > currentMinSliderX && endSliderX > startSliderX) {
       if (currentCard === 0) return;
       scrollToPrevCard();
@@ -168,13 +169,6 @@ const { images } = Astro.props;
       if (currentCard === cardsCount) return;
       scrollToNextCard();
     }
-
-    setTimeout(() => {
-      cardSliderScroll.scrollTo({
-        left: cardSliderScroll.offsetWidth * currentCard,
-        behavior: "smooth",
-      });
-    }, 800);
   });
 
   nextCardSliderBtn.addEventListener("click", scrollToNextCard);
