Update: cardslider icons colors

--- a/src/containers/Card_Slider.astro
+++ b/src/containers/Card_Slider.astro
@@ -20,7 +20,7 @@ const { images } = Astro.props;
         height={32}
         fill="none"
         viewBox="0 0 24 24"
-        stroke={"currentColor"}
+        stroke="var(--ico-primary-color)"
       >
         <path
           stroke-linecap="round"
@@ -36,7 +36,7 @@ const { images } = Astro.props;
         height={32}
         fill="none"
         viewBox="0 0 24 24"
-        stroke={"currentColor"}
+        stroke="var(--ico-primary-color)"
       >
         <path
           stroke-linecap="round"
